@@ -107,6 +107,7 @@ export(mongo.get.server.err)
 export(mongo.get.server.err.string)
 export(mongo.get.socket)
 export(mongo.get.timeout)
+export(mongo.get.values)
 export(mongo.gridfile.destroy)
 export(mongo.gridfile.get.chunk)
 export(mongo.gridfile.get.chunk.count)
